# centre-api/src/main/java/com/centre/poly/classmanagement/entity/AcceleratedClass.java
@@ -1,17 +1,13 @@
 package com.centre.poly.classmanagement.entity;
 
-import com.centre.poly.person.entity.Student;
-import com.fasterxml.jackson.annotation.JsonManagedReference;
 import jakarta.persistence.*;
+import java.time.LocalDate;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.experimental.SuperBuilder;
-
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
 
 @Getter
 @Setter
@@ -20,11 +16,13 @@ import java.util.List;
 @AllArgsConstructor
 @Entity
 public class AcceleratedClass extends Class {
-    
-    @Column(nullable = false)
-    private LocalDate startDate;
-    
-    @Column(nullable = false)
-    private LocalDate endDate;
-    
+
+  @Column(nullable = false)
+  private LocalDate startDate;
+
+  @Column(nullable = false)
+  private LocalDate endDate;
+
+  @OneToMany(mappedBy = "acceleratedClass", fetch = FetchType.LAZY)
+  private List<AcceleratedClassEntry> acceleratedClassEntries;
 }
