# centre-ui/src/app/services/models/accelerated-class-entry.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+import { AcceleratedClass } from '../models/accelerated-class';
+import { Student } from '../models/student';
+export interface AcceleratedClassEntry {
+  acceleratedClass?: AcceleratedClass;
+  id?: number;
+  student?: Student;
+}
