# centre-ui/src/openApi/openApi.yml
@@ -1756,6 +1756,57 @@
         }
       }
     },
+    "/class/{classId}/students/export": {
+      "get": {
+        "tags": [
+          "classe-formation-controller"
+        ],
+        "operationId": "exportClassStudentsAsPdf",
+        "parameters": [
+          {
+            "name": "classId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          },
+          {
+            "name": "isAccelerated",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "boolean"
+            }
+          },
+          {
+            "name": "isAccredited",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "boolean"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/pdf": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string",
+                    "format": "byte"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/class/accredited/{classId}/students": {
       "get": {
         "tags": [
@@ -3552,6 +3603,27 @@
           "endDate": {
             "type": "string",
             "format": "date"
+          },
+          "acceleratedClassEntries": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AcceleratedClassEntry"
+            }
+          }
+        }
+      },
+      "AcceleratedClassEntry": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "student": {
+            "$ref": "#/components/schemas/Student"
+          },
+          "acceleratedClass": {
+            "$ref": "#/components/schemas/AcceleratedClass"
           }
         }
       },
@@ -3601,6 +3673,72 @@
           }
         }
       },
+      "Parent": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "phoneNumber": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "birthDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "identityNumber": {
+            "type": "string"
+          },
+          "address": {
+            "$ref": "#/components/schemas/Address"
+          },
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastModifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "profession": {
+            "type": "string"
+          },
+          "type": {
+            "type": "string",
+            "enum": [
+              "FATHER",
+              "MOTHER"
+            ]
+          },
+          "maritalStatus": {
+            "type": "string",
+            "enum": [
+              "MARRIED",
+              "DIVORCED",
+              "WIDOWED"
+            ]
+          },
+          "isDeceased": {
+            "type": "boolean"
+          },
+          "students": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Student"
+            }
+          }
+        }
+      },
       "Specialty": {
         "type": "object",
         "properties": {
@@ -3621,6 +3759,54 @@
           "lastModifiedDate": {
             "type": "string",
             "format": "date-time"
+          }
+        }
+      },
+      "Student": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "phoneNumber": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "birthDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "identityNumber": {
+            "type": "string"
+          },
+          "address": {
+            "$ref": "#/components/schemas/Address"
+          },
+          "createdDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "lastModifiedDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "levelOfEducation": {
+            "type": "string"
+          },
+          "mother": {
+            "$ref": "#/components/schemas/Parent"
+          },
+          "father": {
+            "$ref": "#/components/schemas/Parent"
           }
         }
       }
